Fix product input wrapping on certain mobile devices

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -129,6 +129,10 @@ fieldset {
 
 .Flex {
   display: flex;
+}
+
+.FlexCenter {
+  display: flex;
   align-items: center;
 }
 
